@@ -54,15 +54,24 @@ class freemedModule extends module {
 	// calling function
 	function setup () {
 		if (!freemed_module_check($this->MODULE_NAME,$this->MODULE_VERSION)) {
-				// register module
+			// register module
 			freemed_module_register($this->MODULE_NAME, $this->MODULE_VERSION);
+			// check if it is installed *AT ALL*
+			if (!freemed_module_check($this->MODULE_NAME, "0.0001")) {
 				// run internal setup routine
-			return $this->_setup();
+				return $this->_setup();
+			} else {
+				// run internal update routine
+				return $this->_update();
+			} // end checking to see if installed at all
 		} // end checking for module
 	} // end function setup
 
 	// _setup (in this case, wrapped in classes...)
 	function _setup () { return true; }
+
+	// _update (in this case, wrapped in classes...)
+	function _update () { return true; }
 
 } // end class freemedModule
 
